[gd_scene load_steps=4 format=3 uid="uid://bet1qdes2tl41"]

[ext_resource type="Script" uid="uid://ccjwpudd47bw4" path="res://scripts/customer_queue.gd" id="1_106ch"]
[ext_resource type="PackedScene" uid="uid://b8pvwlfmfghud" path="res://scenes/customer.tscn" id="1_gpoa4"]
[ext_resource type="PackedScene" uid="uid://b7hyugc3ib55t" path="res://scenes/customer_offer_ui.tscn" id="3_106ch"]

[node name="CustomerQueue" type="Node2D"]
script = ExtResource("1_106ch")

[node name="Queue" type="HBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="CustomerPlaceholder1" parent="Queue" instance=ExtResource("1_gpoa4")]
layout_mode = 2

[node name="CustomerPlaceholder2" parent="Queue" instance=ExtResource("1_gpoa4")]
layout_mode = 2

[node name="CustomerPlaceholder3" parent="Queue" instance=ExtResource("1_gpoa4")]
layout_mode = 2

[node name="TestAddButton" type="Button" parent="."]
offset_top = 101.0
offset_right = 39.0
offset_bottom = 132.0
text = "Add"

[node name="CustomerOfferUI" parent="." instance=ExtResource("3_106ch")]
visible = false
position = Vector2(-176, -117)

[node name="AcceptDialog" type="AcceptDialog" parent="."]
oversampling_override = 1.0
title = "Sold out!"
size = Vector2i(203, 100)
dialog_text = "Shop inventory is empty"

[connection signal="pressed" from="TestAddButton" to="." method="_on_test_add_button_pressed"]
